[package]
name = "cdoc"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2018"

[dependencies]
clang = { path="../clang-rs", features=["clang_7_0", "static"] }
enum_dispatch = "^0.3"
itertools = "^0.10"
rayon = "^1.5"
serde = { version="^1.0", features=["derive"] }
serde_json = "^1.0"
tempfile = "^3.2"
thiserror = "^1.0"
